Attempt to solve keyboard covering destination entry field.

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ html, body {
 #app {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: var(--app-height, 100%);
   max-width: 480px;
   margin: 0 auto;
 }
